@@ -18,6 +18,8 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #2113:  'zopectl test' masked Ctrl-C.
+
       - OFS Image: Image and File updated to use isinstance(data, str)
         and raises TypeError upon encountering unicode objects.
 
